2009-08-27 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: fix url

2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
	* INSTALL: use default_install_python due to the new build system of sec

2007-11-08 Vlad Glagolev <stealth@sourcemage.org>
	* DETAILS: PATCHLEVEL=1
	* DEPENDS: fixed jpeg as optional, added
	  tk, zlib, freetype2

2006-12-29 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 1.1.6

2006-11-08 Flavien Bridault <vlaaad@sourcemage.org>
	* TRIGGERS: Removed, python upgrades are now handled in the python spell

2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
	* DETAILS: [automated] Removed UPDATED.

2006-09-21 Juuso Alasuutari <iuso@sourcemage.org>
	* PROVIDES: [automated] Fixed invalid entries.

2006-03-12 Karsten Behrmann <BearPerson@sourcemage.org>
	* DETAILS: (automated) Add KEYWORDS

2005-11-27 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 1.1.5

2005-02-28 Eric Sandall <sandalle@sourcemage.org>
	* CONFLICTS: Removed conflicting spell

2005-01-19 Unet <unet@sourcemage.org>
	* INSTALL: Make use of INSTALL_ROOT

2004-12-16 Eric Sandall <sandalle@sourcemage.org>
	* DEPENDS,INSTALL,TRIGGERS: Python renamed to python

2004-12-12 Seth Woolley <seth@tautology.org>
	* DETAILS: version 1.1.5b1
	* BUILD: removed configure and make now included in build
	  already through build_ext -i
	* font.diff: fixed ft patch so that it will apply through
	  version bumps.
	* INSTALL: all headers moved, not just those named by name,
	  as they get renamed frequently.

2004-08-14 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 1.1.5a3
	  fixes bug #7232

2004-07-21 Treeve Jelbert <treeve@sourcemage.org>
	* BUILD: fix sed command

2004-07-20 Eric Sandall <sandalle@sourcemage.org>
	* Renamed to pil
	* DETAILS: Renamed to pil
	  Removed MAINTAINER
	  BUILD_API=2
	* BUILD: Converted to BUILD_API 2
	* INSTALL: Added
	* CONFLICTS: Conflicts with PIL
	* HISTORY: Formatted to Guru Handbook

2004-05-09 Treeve Jelbert <treeve@sourcemage.org>