@@ -1,0 +1,11 @@
+Les sous-répertoires Imaging-1.1.6.orig/Docs et Imaging-1.1.6/Docs sont identiques.
+Les sous-répertoires Imaging-1.1.6.orig/Images et Imaging-1.1.6/Images sont identiques.
+Les sous-répertoires Imaging-1.1.6.orig/libImaging et Imaging-1.1.6/libImaging sont identiques.
+Les sous-répertoires Imaging-1.1.6.orig/PIL et Imaging-1.1.6/PIL sont identiques.
+Les sous-répertoires Imaging-1.1.6.orig/Sane et Imaging-1.1.6/Sane sont identiques.
+Les sous-répertoires Imaging-1.1.6.orig/Scripts et Imaging-1.1.6/Scripts sont identiques.
+diff Imaging-1.1.6.orig/setup.py Imaging-1.1.6/setup.py
+201a202,203
+>         add_directory(library_dirs, "/lib")
+> 
+Les sous-répertoires Imaging-1.1.6.orig/Tk et Imaging-1.1.6/Tk sont identiques.
