@@ -1,0 +1,6 @@
+default_pre_build &&
+cd ${SOURCE_DIRECTORY} &&
+patch -p0 <$SPELL_DIRECTORY/font.diff       &&
+# adds /lib to lib search path, in order to find zlib
+patch -p1 < ${SPELL_DIRECTORY}/Imaging-1.1.6_libpath.patch &&
+python  setup.py  build_ext -i
