@@ -1,3 +1,7 @@
+2009-09-01 Quentin Rameau <quinq@sourcemage.org>
+	* PRE_BUILD, Imaging-1.1.6_libpath.patch: added, search for zlib in /lib,
+	  moved (and removed) stuff done in BUILD to PRE_BUILD
+
 2009-08-27 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: fix url
 
@@ -92,3 +96,4 @@
 
 2002-06-12 Unet <unet@sourcemage.org>
 	* HISTORY: Created this.
+
